--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Insta Pano</string>
+    <string name="app_name">InstaPano</string>
     <string name="button_choose_photo"><b>choose photo</b></string>
     <string name="button_take_photo"><b>take photo</b></string>
     <string name="button_save_pano"><b>save</b></string>
@@ -8,30 +8,39 @@
     <string name="maximum_parts_quantity">10</string>
 
     <string name="permission_denied">Permission denied</string>
-    <string name="cut_error">parts of the image will not fit instagram. please set bounds with green area</string>
+    <string name="cut_error">Parts of the image will not fit instagram. Please set bounds with green area</string>
+
+    <string name="images_saving_error">An images has already been created. Please check gallery.</string>
+    <string name="images_saving_success">An images has successfully been created.</string>
+    <string name="image_chooser_title">Select image</string>
+    <string name="image_share_title">Share to</string>
 
     <!--menu-->
     <string name="action_settings">Settings</string>
     <string name="action_save">Save</string>
     <string name="action_preview">Preview</string>
     <string name="action_instructions">Instructions</string>
-
-    <!--preference categories-->
-    <string name="pref_category_colors_title">colors</string>
-    <string name="pref_category_other_title">other</string>
+    <string name="action_share">Share</string>
+    <string name="action_rotate_left">Rotate left</string>
+    <string name="action_rotate_right">Rotate right</string>
 
     <!--preferences-->
     <string name="pref_format_label">output format</string>
     <string name="pref_format_key">output_format</string>
 
     <!--preferences colors-->
-    <string name="format_jpg_value" translatable="false">jpg</string>
+    <string name="format_jpg_value">jpg</string>
     <string name="format_jpg_label">JPG</string>
 
-    <string name="format_png_value" translatable="false">png</string>
+    <string name="format_png_value">png</string>
     <string name="format_png_label">PNG</string>
 
     <!--instructions-->
-
+    <string name="first_step">1. Choose or take photo</string>
+    <string name="second_step">2. Set bounds until it became green</string>
+    <string name="third_step">3. Double tap or press icon in menu to see result</string>
+    <string name="forth_step">4. Save images to gallery by pressing save button</string>
+    <string name="fifth_step">5. Post photos to instagram</string>
+    <string name="sixth_step">6. You are amazing!</string>
 
 </resources>
